third_party/move/move-prover/tests/sources/functional/closures/closure_optimized_away.exp
Move prover returns: exiting with verification errors
error: post-condition does not hold
   ┌─ tests/sources/functional/closures/closure_optimized_away.move:17:9
   │
17 │         ensures result == x + 2; // This does not verify
   │         ^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/sources/functional/closures/closure_optimized_away.move:13: test_closure_2
   =         x = <redacted>
   =     at tests/sources/functional/closures/closure_optimized_away.move:14: test_closure_2
   =         x = <redacted>
   =         y = <redacted>
   =         result = <redacted>
   =     at tests/sources/functional/closures/closure_optimized_away.move:14: test_closure_2
   =         result = <redacted>
   =     at tests/sources/functional/closures/closure_optimized_away.move:15: test_closure_2
   =     at tests/sources/functional/closures/closure_optimized_away.move:17: test_closure_2 (spec)
